# IsoGroup

./: .gitignore  README.md  pyproject.toml  readthedocs.yaml  setup.cfg  targeted_test.py  test.py  tox.ini  untargeted_experiment_log.txt
.github/workflows/: pypi_deployment.yml  tests.yml
data/: cmd_line.txt  data_test.csv  database_test.csv  database_test_2.csv  database_test_3.csv  dataset_test.txt  dataset_test_2.txt  dataset_test_3.txt  dataset_test_4.txt  dataset_test_XCMS.txt  isotopic_db_export.tsv
data/res/: test.annotated_clusters.tsv  test.clusters_summary.tsv  test.features.tsv
data/res_targeted/: targeted.annotated_clusters.tsv  targeted.clusters_summary.tsv  targeted.features.tsv
data/res_untargeted/: dataset_test_XCMS_clusters_RT10.0_ppm5.0.features.tsv  dataset_test_XCMS_clusters_RT10.0_ppm5.0.tsv
doc/: conf.py  definitions.rst  index.rst  library_doc.rst  license.rst  quickstart.rst  reference.rst  showcase_targetedisogroup.ipynb  tutorials.rst  tutorials_targeted.rst  tutorials_untargeted.rst
isogroup/: __main__.py  cluster.py  feature.py  sample.py
isogroup/base/: cluster.py  database.py  experiment.py  feature.py  io.py  misc.py  sample.py  targeted_experiment.py  untargeted_experiment.py
isogroup/enhancer/: enhancer.py  labeled_enhancer.py  unlabeled_enhancer.py
isogroup/tests/: conftest.py  test_cluster.py  test_experiment.py  test_labeled_enhancer.py  test_targeted_experiment.py  test_unlabeled_enhancer.py  test_untargeted_experiment.py
isogroup/ui/: cli.py
