[metadata]
name = IsoGroup
version = 0.1#attr: isogroup.__version__
author = Pierre Millard, Baudoin Délépine, Matthieu Guionnet
author_email = millard@insa-toulouse.fr
description = IsoGroup: Isotope Correction for mass spectrometry labeling experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetaSys-LISBP/IsoCor/
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas >= 0.17.1,
    scipy >= 0.12.1

[options.entry_points]
console_scripts =
    isogroup = isogroup.ui.cli:start_cli

